# rl-evo-lab

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTEXT.md  README.md  pyproject.toml  ruff.toml
experiments/: cartpole_eder_vs_baseline.py  cartpole_efficiency.py  cartpole_model_size.py  cartpole_sample_efficiency.py  lunarlander_efficiency.py
scripts/: sync_readme.py
src/rl_evo_lab/: experiment.py  train.py
src/rl_evo_lab/actor/: es_actor.py  es_worker.py
src/rl_evo_lab/buffer/: replay_buffer.py
src/rl_evo_lab/intrinsic/: episodic_novelty.py  inverse_dynamics.py
src/rl_evo_lab/learner/: dqn.py  network.py
src/rl_evo_lab/utils/: compare.py  config.py  logging.py  plot.py  seeding.py
tests/: test_buffer.py  test_es.py  test_intrinsic.py  test_network.py  test_readme_sync.py  test_train.py
